--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,180 +1,237 @@
 html,
 body {
-margin: 0;
-padding: 0;
- width: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #cf1e1e;
 }
-body { 
-    box-sizing: border-box;
-display: flex;
-flex-direction: column;
-min-height: 100vh;
- padding-top: 147px;
- font-family: 'Open Sans', sans-serif;
- font-weight: 400;
- font-size: 16px;
- line-height: 1.3;
- color: #1F1E1E;
+.body {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-top: 147px;
 }
-
 .page-header {
-position: fixed;
-top: 0;
-left: 0;
-width: 100%;
-height: 147px;
-background: rgba(222, 222, 222, 0.98);
-z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 147px;
+  display: flex;
+  align-items: center;
+  background-color: rgba(222, 222, 222, 0.5);
+  backdrop-filter: blur(20px);
+  z-index: 100;
 }
-@supports (backdrop-filter: blur(20px))
-{
-    .page-header{
+@supports (backdrop-filter: blur(20px)) {
+  .page-header {
+    background-color: rgba(222, 222, 222, 0.5);
     backdrop-filter: blur(20px);
-    background: rgba(222, 222, 222, 0.5);
-}
-}
-.page-header_container {
-    box-sizing: border-box;
-    margin: 0 auto;
-display: flex;
-align-items: center;
-max-width: 1414px;
-width: 100%;
-padding-left: 40px;
-padding-right: 40px;
-}
-.page-header_logo{
-    flex-shrink: 0;
-    width: 202px;
-    height: 147px;
-    text-decoration: none;
-    font-size: 0;
-}
-.page-header_logo-icon{
-width: 100%;
-height: 100%;
-}
-.page-header_nav{
-    margin: 0 auto;
-    display: flex;
-    align-items: baseline;
-}
-.page-header_nav-link{
-margin:0 25px;
-text-decoration: none;
-font-weight: 600;
-font-style: 18px;
-line-height: 1.3;
-color: #1F1E1E;
-transition: color 0.2s;
-}
-.page-header_nav-link:hover {
-    color: #BC3324;
-}
-.page-header_nav-link:active {
-    color: #BC3324;
+  }
 }
 .main {
-flex: 1 0 auto;
-} 
+  flex: 1 0 auto;
+}
 .page-footer {
-flex: 0;
+  flex: 0 0 auto;
+  background-color: gray;
 }
-.btn{
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    padding: 15px 40px;
-    border: 1px solid #1F1E1E ;
-    background-color: transparent;
-    text-decoration: none;
-    outline: none;
-    font-weight: 600;
-    font-style: 16px;
-    line-height: 1.3;
-    text-align: center;
-    color: #1F1E1E;
-    transition: color 0.2s,background-color 0.2s;
+.page-header__container {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 1414px;
+  margin: 0 auto;
+  padding-left: 40px;
+  padding-right: 40px;
 }
-.btn:hover,
-.btn:active{
-    color: #FFFFFF;
-    background-color:#1F1E1E 
+.page-header__logo {
+  flex-shrink: 0;
+  width: 202px;
+  height: 147px;
+  font-size: 0;
+  text-decoration: none;
+}
+.page-header__logo-icon {
+  width: 100%;
+  height: 100%;
+}
+.page-header__nav {
+  display: flex;
+  align-items: baseline;
+  margin: 0 auto;
+}
+.page-header__nav-link {
+  margin: 0 25px;
+  color: #1f1e1e;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+.page-header__nav-link:hover {
+  color: #bc3324;
+}
+.body {
+  color: #1f1e1e;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.375;
+}
+.btn {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 15px 40px;
+  border: 1px solid #1f1e1e;
+  background-color: transparent;
+  outline: none;
+  color: #1f1e1e;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+  overflow: hidden;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #1f1e1e;
+  color: #ffffff;
+}
+.page-header__right-block {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 202px;
+}
+.section-title {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 624px;
+  min-height: 62px;
+  margin: 0 auto 150px;
+  padding: 8px 45px;
+  background-color: #1f1e1e;
+  color: #ffffff;
+  font-family: "Lora", serif;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.277;
+  text-align: center;
+  text-transform: uppercase;
 }
 
-.page-header_right-blok{
-    display: flex;
-    justify-content: flex-end;
-    width: 202px;
+.listing {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1414px;
+  margin: 0 auto;
+  padding-left: 40px;
+  padding-right: 40px;
 }
-.events{
-    box-sizing: border-box;
-    margin: 0 auto;
-    max-width: 1414px;
-    padding-right: 40px;
-    padding-left: 40px;
-}
-.listing_events-card{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -30px;
 
+.listing__events-list {
+  display: flex;
+  flex-wrap: wrap;
 }
-.events-card{
-    display: flex;
-    width: 100%;
-    margin: 0 30px 120px;
-    max-width: 405px;
-    min-width: 280px;
-    width: calc(33.333% - 60px);
+.events {
+  padding: 140px 0 100px;
 }
-.events-card_link{
-    display: flex;
-    flex-direction: column;
-     width: 100%;
-     text-decoration: none;
-   
+.events__listing {
+  margin-bottom: 100px;
 }
-.events-card_picture{
-    display: block;
-    margin-bottom: 25px;
-    position: relative;
-}
-.events-card_picture::before{
-    content: '';
-    display: block;
-    padding-top: 107,16%;
-    width: 100%;
-}
-.events-card_img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.events-card_title{
 
+.event-card {
+  display: flex;
+  width: 405px;
+  max-width: 100%;
+  min-width: 280px;
 }
-.reserve {
-    display: grid;
-    width: 100%;
-    gap: 67px 150px;
-    grid-template-columns: 405px calc(89% - 405px);
-    grid-template-areas:
-     "checkbox shema"
-    "order legend";
+
+.event-card__link {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  color: #1f1e1e;
+  text-decoration: none;
 }
-.reserve__checkbox{
-    grid-area: checkbox;
+.event-card link:hover .event-card__tittle {
+  color: #bc3324;
+  text-decoration-color: #bc3324;
 }
-.reserve__shema{
-    grid-area: shema ;
+
+.event-card__picture {
+  display: block;
+  position: relative;
+  width: 100%;
+  margin: 0 0 25px;
+  font-size: 0;
+  text-decoration: none;
+  overflow: hidden;
 }
-.reserve__order{
-    grid-area:order ;
+
+.event-card__picture::after {
+  content: "";
+  display: block;
+  width: 100%;
+  padding-top: 107.16%;
 }
-.reserve__legend{
-    grid-area: legend;
+
+.event-card__img {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.event-card__title {
+  margin: 0 0 15px;
+  min-height: 66px;
+  color: #1f1e1e;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+  text-decoration: underline transparent;
+  transition: color 0.2s, text-decoration-color 0.2s;
+}
+.event-card__description {
+  margin: 0 0 auto;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.event-card__time {
+  margin: 15px 0 0;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+}
+.listing__events-card {
+  margin-right: 60px;
+}
+.listing__events-card:nth-child(3n) {
+  margin-right: 0;
+}
+.listing__events-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -30px -120px;
+}
+.listing__events-card {
+  width: calc(33.3333% - 60px);
+  margin: 0 30px 120px;
 }
